2011-01-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_store_user_rules): Removed use of
	temporary variable "auth_dir_name" wich became superflous in
	revision 9746, note in documentation that directory has to exist prior
	to function call.

2011-01-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_user_rules)
	(openvas_auth_user_uuid_rules): Removed one todo comment, precised one
	other brief comment.

2010-12-31  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/ldap_auth.h, misc/ldap_auth.c (ldap_auth_query_role): Made a
	parameter const.

2010-12-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Make sure function calls match the prototype for the function.
	Discovered by Stephan Kleine.

	* nasl/nasl_host.c (nasl_this_host): Adjust calls to
	socket_get_next_source_v4_addr and socket_get_next_source_v6_addr to
	match their prototypes.

	* misc/pcap.c (v6_getsourceip, getsourceip, v6_routethrough)
	(routethrough): Adjust calls to socket_get_next_source_addr,
	socket_get_next_source_v4_addr and socket_get_next_source_v6_addr to
	match their prototypes.

2010-12-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* VERSION: Set to 4.0.0.rc2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-12-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 4.0+rc1 release.

	* VERSION: Set to 4.0.0.rc1.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2010-12-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-macros.cmake: Removed outdated and unused CMake
	macros.

2010-12-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* TODO: Removed 2 old entries about header files that
	are solved meanwhile.

2010-12-17  Michael Wiegand <michael.wiegand@greenbone.net>
