@@ -52,6 +52,8 @@ int openvas_is_user_admin (const gchar *);
 int openvas_set_user_role (const gchar *, const gchar *,
                            const gchar * user_dir_name);
 
+int openvas_auth_mkrulesdir (const gchar * user_dir_name);
+
 int openvas_auth_user_rules (const gchar * username, gchar ** rules);
 
 int openvas_auth_user_uuid_rules (const gchar * username,
